# js-vs-wasm-demo

./: Cargo.toml  README.md
src/: lib.rs  utils.rs
