[package]
name = "my-lib"
version = "0.1.0"
edition = "2021"
authors = ["sking <994129509@qq.com>"]
description = "babby's first wasm package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
wasm-bindgen="0.2"
web-sys ={version="0.3.57 ",features=["console"]}
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false